2013-06-17  Albert Chu <chu11@llnl.gov>

	* man/manpage-common-troubleshooting-inband-outofband.man: New
	common manpage.

	* man/: Add inband & outofband common troubleshooting to most
	FreeIPMI tool manpages.
	
2013-05-30  Ales Ledvinka <aledvink@redhat.com>

	* common/toolcommon/pstdout.c (pstdout_vprintf): Fix portability
	bug, va_list is not a pointer type.
	
2013-05-29  Albert Chu <chu11@llnl.gov>

        * NEWS, configure.ac: Update for release.

        * Tagged Release-1_2_7.

2013-05-16  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/util/ipmi-sensor-and-event-code-tables-util.c (ipmi_get_event_messages):
	Fix sensor event message corner case w/ OEM sensors.
	
2013-05-06 Peter Volkov <pva@gentoo.org>

	* configure.ac: Update for autoconf 1.14. 
	
2013-04-29  Albert Chu <chu11@llnl.gov>

        * NEWS, configure.ac: Update for release.

        * Tagged Release-1_2_6.

2013-04-26  Albert Chu <chu11@llnl.gov>

	Merge branch 'sendto'

	Modify architecture to send IPMI 1.5 network packets via one
	function and IPMI 2.0 network packets via another function.  IPMI
	1.5 packets must be padded for legacy reasons, however IPMI 2.0
	packets should not be padded.
	(Issue discovered by Rob Swindell - swindell at broadcom dot com).
	
	* libfreeipmi/include/freeipmi/interface/ipmi-rmcpplus-interface.h,
	libfreeipmi/interface/ipmi-rmcpplus-interface.c (ipmi_rmcpplus_sendto,
	ipmi_rmcpplus_recvfrom): New functions to handle non-legacy pad in
	IPMI 2.0.

	* libfreeipmi/interface/ipmi-network.h,
	libfreeipmi/interface/ipmi-network.c: New files.

	* libfreeipmi/interface/ipmi-lan-interface.c (ipmi_lan_recvfrom):
	Adjust to use new common function.

	* libfreeipmi/api/ipmi-lan-session-common.c (_api_lan_2_0_cmd_send):
	Use new ipmi_rmcpplus_sendto.

	* ipmipower/, libipmiconsole/ : Support sending packets via
	ipmi_lan_sendto or ipmi_rmcpplus_sendto.

2013-04-25  Albert Chu <chu11@llnl.gov>
